--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -17,8 +18,12 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@atoms/*": ["src/app/components/atoms/*"],
+      "@molecules/*": ["src/app/components/molecules/*"],
+      "@organisms/*": ["src/app/components/organisms/*"],
+      "@templates/*": ["src/app/components/templates/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
